--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
 h1 {
-   color: blue;
+   color:Tomato;
+   font family:Violet;
+   font size:26px;
+   
+   <p style="color:DodgerBlue;">Lorem ipsum...</p> 
+      
 }
