--- a/style.css
+++ b/style.css
@@ -6,3 +6,9 @@ h1 {
    <p style="color:DodgerBlue;">Lorem ipsum...</p> 
       
 }
+h2 {
+   color:Tomato;
+   font family:blue;
+   font size:48px;
+   
+}
